[package]
name = "rank_reduce_square"
version = "0.0.1"
authors = ["Alan Mitchell <alanm12345@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
noise = "0.7.0"
image = "0.23.14"
rand = "0.8.4"
chrono = "0.4.19"
nalgebra = "0.29.0"